# a2dpSinkHfpClient

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  idf_component.yml  sdkconfig  sdkconfig.defaults
.github/: funding.yml
components/a2dpSinkHfpClient/: CMakeLists.txt  idf_component.yml
components/a2dpSinkHfpClient/include/: a2dpSink.h  a2dpSinkHfpHf.h  bt_app_hf.h  bt_app_pbac.h  bt_gap.h  bt_i2s.h
components/a2dpSinkHfpClient/src/: a2dpSink.c  a2dpSinkHfpHf.c  bt_app_avrc.c  bt_app_hf.c  bt_app_pbac.c  bt_gap.c  bt_i2s.c  codec.c  phonebook.c
examples/avrc/: README.md
examples/avrc/main/: main.c
examples/hfp/: CMakeLists.txt  README.md
examples/hfp/main/: idf_component.yml  main.c
examples/minimal/: CMakeLists.txt  README.md
examples/minimal/main/: main.c
examples/minimal_with_config/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/minimal_with_config/main/: main.c
examples/phonecall/: CMakeLists.txt  README.md
examples/phonecall/main/: CMakeLists.txt  main.c
include/: a2dpSinkHfpHf.h  bt_app_avrc.h  bt_app_hf.h  bt_app_pbac.h  bt_gap.h  bt_i2s.h  bt_volume_control.h  codec.h
main/: A2DPSink.cpp  A2DPSink.h  BluetoothManager.cpp  BluetoothManager.h  CMakeLists.txt  HFPClient.cpp  HFPClient.h  I2SManager.cpp  I2SManager.h  README.md  bt_app_av.c  bt_app_av.h  bt_app_core.c  bt_app_core.h  bt_app_hf.c  bt_app_hf.h  bt_app_i2s.c  bt_app_i2s.h  bt_app_volume_control.c  bt_hfp.c  bt_hfp.h  bt_i2s.c  bt_i2s.h  config.h  main.c  main.cpp
src/: a2dpSink.c  a2dpSinkHfpHf.c  bt_app_avrc.c  bt_app_hf.c  bt_app_pbac.c  bt_gap.c  bt_i2s.c  bt_volume_control.c  codec.c  ringtone.c
